<resources>
    <string name="app_name">Сalculator</string>
    <string name="nav_header_title">Calculator</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Choose theme</string>

    <string name="menu_home">Standard</string>
    <string name="menu_gallery">Engineer</string>
    <string name="menu_slideshow">Graphics</string>

    <string name="add_graph">Add</string>
    <string name="graph_input_placeholder" translatable="false">sin(x)</string>

    <string name="theme_header">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_sys">System</string>

    <string name="close_opt">Close</string>
    <string name="apply_opt">Apply</string>

    <string name="zero" translatable="false">0</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="dot" translatable="false">.</string>

    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="divide" translatable="false">÷</string>
    <string name="multiple" translatable="false">×</string>

    <string name="lbracket" translatable="false">(</string>
    <string name="rbracket" translatable="false">)</string>

    <string name="equal" translatable="false">=</string>
    <string name="AC" translatable="false">AC</string>
    <string name="backspace" translatable="false">⌫</string>

    <string name="factorial"  translatable="false">!</string>
    <string name="percent" translatable="false">%</string>
    <string name="exp" translatable="false">^</string>
    <string name="sqrt" translatable="false">√</string>
    <string name="e" translatable="false">e</string>
    <string name="pi" translatable="false">π</string>
    <string name="log" translatable="false"><i>log()</i></string>
    <string name="ln" translatable="false"><i>ln()</i></string>
    <string name="sin" translatable="false"><i>sin()</i></string>
    <string name="cos" translatable="false"><i>cos()</i></string>
    <string name="tan" translatable="false"><i>tan()</i></string>
    <string name="degrad" translatable="false">DEG</string>




</resources>