<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EngineerCalculatorFragment">

    <HorizontalScrollView
        android:id="@+id/scroll_line"
        style="@style/InputHorizontalScroll">

        <TextView
            android:id="@+id/eline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAlignment="viewEnd"
            android:textSize="55sp" />
    </HorizontalScrollView>


    <LinearLayout style="@style/CalcLayout">

        <Button
            android:id="@+id/degrad"
            style="@style/EngCalcBtn"
            android:text="@string/degrad" />

        <Button
            android:id="@+id/sin"
            style="@style/EngCalcBtn"
            android:text="@string/sin" />

        <Button
            android:id="@+id/cos"
            style="@style/EngCalcBtn"
            android:text="@string/cos" />

        <Button
            android:id="@+id/tan"
            style="@style/EngCalcBtn"
            android:text="@string/tan" />

    </LinearLayout>

    <LinearLayout style="@style/CalcLayout">

        <Button
            android:id="@+id/pi"
            style="@style/EngCalcBtn"
            android:text="@string/pi" />

        <Button
            android:id="@+id/e"
            style="@style/EngCalcBtn"
            android:text="@string/e" />

        <Button
            android:id="@+id/log"
            style="@style/EngCalcBtn"
            android:text="@string/log" />

        <Button
            android:id="@+id/ln"
            style="@style/EngCalcBtn"
            android:text="@string/ln" />

    </LinearLayout>

    <LinearLayout style="@style/CalcLayout">

        <Button
            android:id="@+id/percent"
            style="@style/EngCalcBtn"
            android:text="@string/percent" />

        <Button
            android:id="@+id/factorial"
            style="@style/EngCalcBtn"
            android:text="@string/factorial" />

        <Button
            android:id="@+id/sqrt"
            style="@style/EngCalcBtn"
            android:text="@string/sqrt" />

        <Button
            android:id="@+id/exp"
            style="@style/EngCalcBtn"
            android:text="@string/exp" />

    </LinearLayout>

    <LinearLayout style="@style/CalcLayout">

        <Button
            android:id="@+id/all_clear"
            style="@style/EngCalcBtn"
            android:text="@string/AC" />

        <Button
            android:id="@+id/l_bracket"
            style="@style/EngCalcBtn"
            android:text="@string/lbracket" />

        <Button
            android:id="@+id/r_bracket"
            style="@style/EngCalcBtn"
            android:text="@string/rbracket" />

        <Button
            android:id="@+id/divide"
            style="@style/EngCalcBtn"
            android:text="@string/divide" />

    </LinearLayout>

    <LinearLayout style="@style/CalcLayout">

        <Button
            android:id="@+id/seven"
            style="@style/EngCalcBtn"
            android:text="@string/seven" />

        <Button
            android:id="@+id/eight"
            style="@style/EngCalcBtn"
            android:text="@string/eight" />

        <Button
            android:id="@+id/nine"
            style="@style/EngCalcBtn"
            android:text="@string/nine" />

        <Button
            android:id="@+id/multiply"
            style="@style/EngCalcBtn"
            android:text="@string/multiple" />

    </LinearLayout>

    <LinearLayout style="@style/CalcLayout">

        <Button
            android:id="@+id/four"
            style="@style/EngCalcBtn"
            android:text="@string/four" />

        <Button
            android:id="@+id/five"
            style="@style/EngCalcBtn"
            android:text="@string/five" />

        <Button
            android:id="@+id/six"
            style="@style/EngCalcBtn"
            android:text="@string/six" />

        <Button
            android:id="@+id/minus"
            style="@style/EngCalcBtn"
            android:text="@string/minus" />

    </LinearLayout>

    <LinearLayout style="@style/CalcLayout">

        <Button
            android:id="@+id/one"
            style="@style/EngCalcBtn"
            android:text="@string/one" />

        <Button
            android:id="@+id/two"
            style="@style/EngCalcBtn"
            android:text="@string/two" />

        <Button
            android:id="@+id/three"
            style="@style/EngCalcBtn"
            android:text="@string/three" />

        <Button
            android:id="@+id/plus"
            style="@style/EngCalcBtn"
            android:text="@string/plus" />

    </LinearLayout>

    <LinearLayout style="@style/CalcLayout">

        <Button
            android:id="@+id/ezero"
            style="@style/EngCalcBtn"
            android:text="@string/zero" />

        <Button
            android:id="@+id/dot"
            style="@style/EngCalcBtn"
            android:text="@string/dot" />

        <Button
            android:id="@+id/backspace"
            style="@style/EngCalcBtn"
            android:text="@string/backspace" />

        <Button
            android:id="@+id/equals"
            style="@style/EngCalcBtn"
            android:text="@string/equal" />

    </LinearLayout>
</LinearLayout>