<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StandardCalculatorFragment">

    <HorizontalScrollView
        android:id="@+id/scroll_line"
        style="@style/InputHorizontalScroll">
        <TextView
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAlignment="viewEnd"
            android:textSize="55sp" />
    </HorizontalScrollView>

    <LinearLayout style="@style/CalcLayout">

        <Button
            android:id="@+id/all_clear"
            style="@style/CalcBtn"
            android:text="@string/AC" />

        <Button
            android:id="@+id/l_bracket"
            style="@style/CalcBtn"
            android:text="@string/lbracket" />

        <Button
            android:id="@+id/r_bracket"
            style="@style/CalcBtn"
            android:text="@string/rbracket" />

        <Button
            android:id="@+id/divide"
            style="@style/CalcBtn"
            android:text="@string/divide" />

    </LinearLayout>

    <LinearLayout style="@style/CalcLayout">

        <Button
            android:id="@+id/seven"
            style="@style/CalcBtn"
            android:text="@string/seven" />

        <Button
            android:id="@+id/eight"
            style="@style/CalcBtn"
            android:text="@string/eight" />

        <Button
            android:id="@+id/nine"
            style="@style/CalcBtn"
            android:text="@string/nine" />

        <Button
            android:id="@+id/multiply"
            style="@style/CalcBtn"
            android:text="@string/multiple" />

    </LinearLayout>

    <LinearLayout style="@style/CalcLayout">

        <Button
            android:id="@+id/four"
            style="@style/CalcBtn"
            android:text="@string/four" />

        <Button
            android:id="@+id/five"
            style="@style/CalcBtn"
            android:text="@string/five" />

        <Button
            android:id="@+id/six"
            style="@style/CalcBtn"
            android:text="@string/six" />

        <Button
            android:id="@+id/minus"
            style="@style/CalcBtn"
            android:text="@string/minus" />

    </LinearLayout>

    <LinearLayout style="@style/CalcLayout">

        <Button
            android:id="@+id/one"
            style="@style/CalcBtn"
            android:text="@string/one" />

        <Button
            android:id="@+id/two"
            style="@style/CalcBtn"
            android:text="@string/two" />

        <Button
            android:id="@+id/three"
            style="@style/CalcBtn"
            android:text="@string/three" />

        <Button
            android:id="@+id/plus"
            style="@style/CalcBtn"
            android:text="@string/plus" />

    </LinearLayout>

    <LinearLayout style="@style/CalcLayout">

        <Button
            android:id="@+id/zero"
            style="@style/CalcBtn"
            android:text="@string/zero" />

        <Button
            android:id="@+id/dot"
            style="@style/CalcBtn"
            android:text="@string/dot" />

        <Button
            android:id="@+id/backspace"
            style="@style/CalcBtn"
            android:text="@string/backspace" />

        <Button
            android:id="@+id/equals"
            style="@style/CalcBtn"
            android:text="@string/equal" />

    </LinearLayout>

</LinearLayout>