<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16sp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_header"
            android:textSize="28sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/light_theme_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_light" />

            <RadioButton
                android:id="@+id/dark_theme_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_dark" />

            <RadioButton
                android:id="@+id/system_theme_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_sys" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/close_opt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/close_opt"
            android:layout_margin="8sp"/>
        <Button
            android:id="@+id/apply_opt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apply_opt"
            android:layout_margin="8sp"/>


    </LinearLayout>

</LinearLayout>