<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/st_calc">

    <fragment
        android:id="@+id/st_calc"
        android:name="com.example.calculator.StandardCalculatorFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/standard_calculator" />

    <fragment
        android:id="@+id/eng_calc"
        android:name="com.example.calculator.EngineerCalculatorFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/engineer_calculator" />

    <fragment
        android:id="@+id/graph_calc"
        android:name="com.example.calculator.GraphingCalculatorFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/graphing_calculator" />
</navigation>